fixed black spacing on top of page

--- a/style.css
+++ b/style.css
@@ -39,18 +39,25 @@ h1 {
 	color: var(--text-color2);
 }
 
+main {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 /* Weather Information Container */
 #container {
+	margin-top: 10em;
 	font-family: 'Slabo 27px', serif;
 	font-size: 1.4rem;
-	margin: 12.5% auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	background: linear-gradient(to right, rgb(22, 75, 112), rgb(2, 88, 114));
 	width: 300px;
-	height: 100%;
 	border-radius: 20px;
 	padding: 20px 30px;
 	color: var(--text-color);
